Blogpost 2 - Llama on Colab

--- a/_posts/2023-10-01-llama.md
+++ b/_posts/2023-10-01-llama.md
@@ -1,34 +1,37 @@
 ---
-title: "איך מריצים את מודל Llama2 🦙 (גדול) על Colab (קטן)? רמז - קוונטיזציה עם ספריית BitsAndBytes"
+title: "איך מריצים את מודל Llama2 🦙 (גדול) על Colab (קטן)? רמז - קוונטיזציה"
 author: SemSis 
 date: 2023-10-01 00:34:00 +0800
 categories: [Llama2, Quantization]
 tags: [LLMs]
 ---
 
+הפעם נספר איך הטכניקה של **קוונטיזציה**, והמימוש שלה בעזרת הספרייה הפייתונית `BitsAndBytes`, מאפשרת את ההרצה של מודל Llama 2 המאסיבי על מחברת Goole Colab קלילה וחינמית 🤯ֿ
+
 ## רקע
 
-משפחת מודלי שפה Llama2 של חברת מטא, כוללת מודלים בגדלים שונים. המודל הבסיסי כולל 70 מיליארד פרמטרים, וכן מודלים קטנים יותר, למשל של כ-13 מיליארד פרמטרים.
-
+משפחת מודלי שפה Llama2 של חברת מטא כוללת שלושה וריאנטים עיקריים: המודל הקטן כולל 7 מיליארד פרמטרים, מודל הביניים הכולל 13 מיליארד פרמטרים, ומודל של כ- 70 מיליארד פרמטרים.
 
 ## מה המשאבים הנדרשים כדי להריץ מודל כזה? 🔨
 
-מבחינת זיכרון, כדי לטעון את המודל נידרש לזיכרון שמסוגל להחזיק את המכפלה: מספר הפרמטרים של המודל x הגודל של כל פרמטר.
-אז בואו נדבר במספרים.
-חישוב מהיר: המודל כולל 13 מיליארד פרמטרים, המיוצגים באמצעות 32bit כל אחד.
-כלומר, יידרשו כ- 7Billion * 32 = 224 Billion Bits, שהם 28GB.
+מבחינת זיכרון, כדי לטעון את המודל נצטרך כמות זיכרון כזו שהיא לפחות מכסה המכפלה:\
+&nbsp;&nbsp;&nbsp;&nbsp; `מספר הפרמטרים של המודל ✖️ הגודל של כל פרמטר`\
+אז בואו נדבר במספרים, בחישוב מהיר: המודל כולל 13 מיליארד פרמטרים, שכל אחד מהם מיוצג באמצעות 32 ביט. ונקבל ש-\
+&nbsp;&nbsp;&nbsp;&nbsp; `מספר הפרמטרים של המודל ✖️ הגודל של כל פרמטר = 13 מיליארד ✖️ 32 ביטים` \
+שהם בסך הכל כ- 28GB.
 
-במערכת Google Colab, יש בערך כ- 15GB~ של RAM, לכן לא נוכל לטעון לזיכרון מודל של 28GB.
-לכן, כדי שנוכל בכל זאת להריץ מודל כזה, נצטרך לדחוס אותו איכשהו.
+מערכת Google Colab חינמית כוללת GPU יחיד ובערך כ- 15GB~ של RAM, לכן לא נוכל לטעון לזיכרון מודל של 28GB.\
+כדי שנוכל בכל זאת להריץ מודל כזה, נצטרך לצמצם את הגודל שלו איכשהו.\
+אז מה עושות?  💡 **דּוֹחֲסוֹת**!
 
-## איך דוחסים מודל כזה? קוונטיזציה
-על מנת להקטין את צריכת הזיכרון וזמן הריצה, נדרש להשתמש בטריקים לדחיסת המודל בזכרון. קוונטיזציה היא שיטה לאופטימיזציה של ייצוג בזכרון. במקרה שלנו - נרצה להמיר את הייצוג של פרמטרי המודל מ-32 ביט ל-4.
-קוונטיזציה עוזרת בכך שמודל ה- 28 ג׳יגה כעת ניתן לטעון בקלות לזיכרון ה- RAM, וגם מסייע ב- inference time.
+## דחיסה באמצעות קוונטיזציה
+על מנת להקטין את צריכת הזיכרון וזמן הריצה של המודל, נרצה להפעיל שיטה לצמצום גודל המודל, אשר אינה מדרדרת באופן מהותי את ביצועיו.\
+נוכל להעזר בשיטות קיימות וידועות, כמו pruning ו- distillation, אבל היום נתמקד בקוונטיזציה.\
+קוונטיזציה היא טכניקה לצמצום גודל המודל, אשר ממירה את המשקולות של המודל מייצוג ברמת דיוק גבוהה, לנמוכה יותר. במקרה שלנו - נרצה להמיר את הייצוג של פרמטרי המודל מ-32 ביט ל- 4 ביט. כיווץ כזה מאפשר למודלי שפה גדולים להיות נגישים גם בסביבות עם משאבי חישוב מוגבלים.
 
 ## ספריית BitsAndBytes
 
-הספרייה הפייתונית BitAndBytes עוזרת להנגיש LLMs, ו- HuggingFace עשו אינטגרציה איתה. ספריית מעטפת ל- Cuda, 
-
+הספרייה הפייתונית `BitAndBytes` היא ספריית מעטפת ל- Cuda, הכוללות מימוש לטכניקות קוונטיזציה שונות. ב- 🤗HuggingFace ביצעו אינטגרציה עם `BitAndBytes`, ובכך מאפשרים למשתמשים להריץ את הרוב הגדול של המודלים הקיימים, באמצעות ייצוג ברמת דיוק של 4 ביט.
 
 ## איך זה נראה בפייתון?
 
